# Cinetik

./: .env  .gitignore  Cinetik_Skills_Summary.txt  README.md  package-lock.json  render.yaml
Cinetik-Backend/: .gitignore  README.md  config.py  database.py  db_utils.py  init_db.py  main.py  pyproject.toml  requirements.txt
Cinetik-Backend/models/: favorites.py  friends.py  media.py  watches.py
Cinetik-Frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
Cinetik-Frontend/src/: App.tsx  index.css
Cinetik-Frontend/src/components/card-components/: Card.tsx  CardGrid.tsx  CardImage.tsx  FavoritesButton.tsx  MediaTitle.tsx  MediaType.tsx  WatchedButton.tsx
Cinetik-Frontend/src/components/filters/: ClearFilterButton.tsx  CollapseButton.tsx  ContentFilters.tsx  Genre.tsx  GenreList.tsx  Platform.tsx  PlatformList.tsx  SearchBar.tsx  SortBy.tsx  SortList.tsx
Cinetik-Frontend/src/components/friends/: Friend.tsx
Cinetik-Frontend/src/components/media-details/: Images.tsx  MediaDetails.tsx  MediaGenres.tsx  MediaProductionCompanies.tsx  MediaProviders.tsx  Overview.tsx  Rating.tsx  ReleaseDate.tsx  Runtime.tsx  Trailer.tsx
Cinetik-Frontend/src/components/media-grids/: FilteredBothGrid.tsx  FilteredMediaGrid.tsx  GridHeading.tsx  MediaGrid.tsx  SearchBothGrid.tsx  SearchMediaGrid.tsx
Cinetik-Frontend/src/components/page-components/: AsidePanel.tsx  Navigation.tsx  NextPageButton.tsx  PrevPageButton.tsx  Separator.tsx
Cinetik-Frontend/src/components/profile/: UserActivityItem.tsx  UserFavorites.tsx  UserFavoritesCard.tsx
Cinetik-Frontend/src/components/settings/: SettingsList.tsx
Cinetik-Frontend/src/components/skeletons/: CardSkeletons.tsx
Cinetik-Frontend/src/components/ui/: form.tsx  resizable.tsx  sidebar.tsx  toaster.tsx  use-toast.ts
Cinetik-Frontend/src/data/: genres.ts  platforms.ts  sortby.ts
Cinetik-Frontend/src/entities/: media.ts  watch-providers.ts
Cinetik-Frontend/src/hooks/: use-enhanced-media.ts  use-filtered-media.ts  use-media-store.ts  use-pagination-store.ts  use-search-media.ts  use-trending.ts  use-watch-providers.ts
Cinetik-Frontend/src/pages/: ContentPage.tsx  MediaDetailsPage.tsx  NotFound.tsx  NotificationsPage.tsx
src/components/Friends/: Friend.tsx  FriendsList.tsx
src/components/card-components/: Card.tsx  CardGrid.tsx  FavoritesButton.tsx  WatchedButton.tsx
src/components/media-details/: MediaDetails.tsx
src/components/media-grids/: FavoritesGrid.tsx  GridHeading.tsx  WatchedGrid.tsx
src/components/page-components/: Navigation.tsx  NextPageButton.tsx  PageNavigation.tsx  PrevPageButton.tsx
src/components/profile/: UserFavoriteItem.tsx  UserFavorites.tsx  UserFavoritesCard.tsx
src/entities/: media.ts
src/hooks/: use-enhanced-media.ts  use-filtered-both.ts  use-filtered-media.ts  use-friend-store.ts  use-media-store.ts  use-pagination-store.ts  use-search-both.ts  use-search-media.ts  use-trending.ts
src/hooks/media-details/: use-media-details.ts
src/hooks/movies/: use-highest-rated-movies.ts  use-trending-movies.ts
src/hooks/series/: use-highest-rated-series.ts  use-trending-series.ts
src/pages/: FriendProfilePage.tsx  FriendsPage.tsx  ProfilePage.tsx  SettingsPage.tsx
src/services/: api-client.ts  media-enhancement.ts
(+14 files in other folders)
